--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
-    "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "express": "^4.17.3",
     "pretty": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
