--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "path": "^0.12.7",
     "pretty": "^2.0.0"
   },
   "scripts": {
