--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "main": "index.tsx",
   "author": "Pasa Ali Aslan",
   "license": "MIT",
-
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
@@ -22,7 +21,8 @@
     "react-select": "^5.2.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "url": "^0.11.0"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
