--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "build": "cd client && yarn install && yarn run build"
   },
   "dependencies": {
-    "heroku": "^7.59.2",
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "pretty": "^2.0.0",
+    "heroku": "^7.59.2",
     "path": "^0.12.7",
-    "bootstrap": "^5.1.3",
+    "pretty": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -27,9 +27,9 @@
     "react-select": "^5.2.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "url": "^0.11.0"
   },
-
   "devDependencies": {
     "@babel/cli": "^7.17.3",
     "@babel/core": "^7.17.5",
