--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
