--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "redux-thunk": "^2.4.1",
     "url": "^0.11.0"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://0.0.0.0:3001",
   "scripts": {
     "start": "webpack serve --config webpack.config.cjs --env env=development",
     "build": "webpack --config webpack.config.cjs --env env=production",
