--- a/client/package.json
+++ b/client/package.json
@@ -2,38 +2,33 @@
   "type": "module",
   "name": "client",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "src/index.tsx",
   "author": "Pasa Ali Aslan",
   "license": "MIT",
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "^2.11.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.3",
-    "cheerio": "^1.0.0-rc.10",
-    "cors": "^2.8.5",
-    "pretty": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.2.1",
     "react-select": "^5.2.2",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "url": "^0.11.0"
+    "redux-devtools-extension": "^2.13.9"
   },
   "proxy": "http://0.0.0.0:3001",
   "scripts": {
     "start": "webpack serve --config webpack.config.cjs --env env=development",
     "build": "webpack --config webpack.config.cjs --env env=production",
-    "lint": "eslint --fix \"./**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
+    "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.5",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
@@ -42,13 +37,13 @@
     "@babel/runtime": "^7.17.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
